2010-04-29  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Fix bug #15942 : Default location in file select dialog (waveform and
	keyframes).

2010-04-29  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesgenerator.cc:
	Set the video uri.

2010-04-29  kitone  <kitone@gna.org>

	* src/keyframes.cc:
	* src/keyframes.h:
	Add video uri and update kf format to the v2.

2010-04-29  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-04-06  kitone  <kitone@gna.org>

	* NEWS:
	* README:
	* configure.in:
	Preparing 0.36.2 release.

2010-04-06  kitone  <kitone@gna.org>

	* configure.in:
	* plugins/subtitleformats/Makefile.am:
	* plugins/subtitleformats/sbv/Makefile.am:
	* plugins/subtitleformats/sbv/sbv.cc:
	* plugins/subtitleformats/sbv/sbv.se-plugin.in:
	Introduce new subtitle format: SBV.

2010-04-01  kitone  <kitone@gna.org>

	* plugins/actions/changeframerate/dialog-change-framerate.ui:
	Fix HIG.

2010-03-30  kitone  <kitone@gna.org>

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/typewriter/typewriter.cc:
	Fix typo.

2010-03-26  kitone  <kitone@gna.org>

	* README:
	Update.

2010-03-22  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2010-03-22  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.36.1 release.

2010-03-21  kitone  <kitone@gna.org>

	* plugins/actions/wavefrommanagement/waveformmanagement.cc:
	Update ui only if needed.

2010-03-21  kitone  <kitone@gna.org>

	* src/player.cc:
	* src/player.h:
	* src/vp/gstplayer.cc:
	* src/vp/gstplayer.h:
	* src/vp/videoplayer.cc:
	* src/vp/videoplayer.h:
	Improvement of the player to work with messages.

	* plugins/actions/keyframesmanagement/keyframesmanagement.cc:
	* plugins/actions/timingfromplayer/timingfromplayer.cc: